--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div id="root">not rendered</div>
+    <div id="root">Loading...</div>
     <script type="module" src="App.jsx"></script>
   </body>
 </html>
